Revisions to case study paper

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -4,6 +4,10 @@ output:
   html_document: default
   pdf_document: default
 ---
+
+\
+&nbsp;
+
 # CASE STUDY 1: INTERIOR FRASER COHO SALMON{#IFCChapter}
 
 
@@ -17,11 +21,14 @@ Five WSP CUs have been identified for Interior Fraser Coho based on genetics and
 
 Only the upper portion of the Fraser Canyon CU (upstream of Hells Gate on the Fraser River) is included in our delineation of Interior Fraser Coho. This delineation is consistent with previous analyses for this SMU (e.g. @arbeiderInteriorFraserCoho2020). As a result, Nahatlatch is the only sub-population included in our description of the Fraser Canyon CU. Kawkawa Creek, which is located below the Fraser Canyon near Hope, BC, is not included in the data we use.
 
+\
+&nbsp;
+&nbsp;
 
 ```{r coho-map, fig.cap="Distribution of the Interior Fraser Coho SMU, including the five CUs that make up the SMU. Only the upper portion of the Fraser Canyon CU (upstream of Hells Gate) is shown here to be consistent with the spatial scale of the data that was used for analyses.", out.width = '65%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-map.png")
 ```
-&nbsp;
+
 
 +-------------------+--------------------------------+
 | Conservation Unit | Sub-populations                  
@@ -47,9 +54,9 @@ Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and assoc
 
 \newpage
 
-Hatchery enhancement has occurred, and continues to occur in some parts of the Interior Fraser Coho SMU. Two CUs are currently considered wild populations based on the criteria developed by @withlerGeneticallyBasedTargets2018 (i.e., do not have hatchery programs; strays from out-of-basin hatchery production are limited to <3% per year), while the other three are considered integrated-wild populations (i.e., with Proportionate Natural Influence (PNI) values most likely $\geq$ 0.72; M. Arbeider, pers. comm.). Within integrated-wild populations, most fish are considered 'wild' under the WSP with parents who were born in the natural environment. The Lower Thompson CU had higher levels of hatchery enhancement between 1998 and 2005, so would likely have been considered an integrated-transition population (0.5 $\leq$ PNI < 0.72) during this period.
+Hatchery enhancement has occurred, and continues to occur, in some parts of the Interior Fraser Coho SMU. Two CUs are currently considered wild populations based on the criteria developed by @withlerGeneticallyBasedTargets2018 (i.e., do not have hatchery programs; strays from out-of-basin hatchery production are limited to <3% per year), while the other three are considered integrated-wild populations (i.e., with Proportionate Natural Influence (PNI) values most likely $\geq$ 0.72; M. Arbeider, pers. comm.). Within integrated-wild populations, most fish are considered 'wild' under the WSP with parents who were born in the natural environment. The Lower Thompson CU had higher levels of hatchery enhancement between 1998 and 2005, so would likely have been considered an integrated-transition population (0.5 $\leq$ PNI < 0.72) during this period.
 
-The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUs of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in review) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix). Results showed that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
+The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUs of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by @holtGuidelinesDefiningLimitInpress to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix). Results showed that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
 
 Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stocks provisions of the revised *Fisheries Act*, necessitating the development of LRPs for this SMU.
 <!--KH: I have included this here to be consistent with WCVI chinook, but we should confirm at some point that this is publishable. Hopefully by the time this paper is published, batch 1 stocks will be prescribed .... -->
@@ -65,18 +72,19 @@ Subsequent work by the Interior Fraser Coho Recovery Team (IFCRT) led to a conse
 Interior Fraser Coho show a strong positive relationship between their spatial distribution and overall abundance, which has been used as a basis for identifying aggregate abundance recovery targets and reference points for the stock group. Starting in 2006, the IFCRT identified a recovery goal of one or more viable sub-populations in each of the five 'populations', where their definition of populations aligns with CUs under the WSP [@ifcrtConservationStrategyCoho2006]. Note that from this point on, we use the term CU instead of population when describing IFCRT recovery goals to be consistent with the WSP. The IFCRT identified a short-term recovery objective that the 3-year average escapement in at least half of the sub-populations within each of the five CUs was to exceed 1,000 natural-origin spawning Coho Salmon, excluding hatchery fish spawning in the wild. Based on analysis of the relationship between aggregate abundance and the number of CUs that met this objective based on historical data, the IFCRT identified an abundance short-term recovery target of 20,000 spawners as the level required to meet their distributional objective. In addition, the IFCRT identified a long-term recovery target of 40,000 spawners, which represented a level that was expected to maintain 1,000 or more wild Coho Salmon in all 11 sub-populations. @deckerAssessmentInteriorFraser2014 updated the IFCRT's original analysis using a longer time series of escapement data. They also quantified the relationship between aggregate abundance and distribution by using a logistic regression to estimate the probability of meeting short-term and long-term recovery objectives as a function of aggregate abundance. They concluded that aggregate spawner abundance levels of 20,000 and 40,000 spawners would result in near 100% probability that the IFCRT’s short-term objective and long-term recovery objectives would be met, respectively.
 
 
-@kormanEvaluationFrameworkAssessing2019 also used logistic regressions of the relationship between the IFCRT's distributional objectives and aggregate abundance when evaluating how exploitation and smolt-to-adult survival rates affected the ability of Interior Fraser Coho to meet conservation targets. Their approach was similar to that of @deckerAssessmentInteriorFraser2014, except they applied logistic regressions at the CU-level instead of the SMU-level. Using this approach, they calculated the probability that IFCRT sub-population objectives were met as a function of total escapement to the CU within their simulation evaluation. When evaluating how well conservation targets were met at the SMU-level, they chose to rely on the previous values of 20,000 and 40,000 identified by the IFCRT instead of updating these values. Finally, the 2018 RPA used an updated logistic regression to identify a long-term recovery target for Interior Fraser Coho that met the long-term IFCRT objective of 1000 spawners in all sub-populations [@arbeiderInteriorFraserCoho2020]. As a result, @arbeiderInteriorFraserCoho2020 recommended that the long-term recovery target for the stock<!--LW: should this be left as stock?--> should be a 3-year geometric mean abundance of 35,935 natural-origin spawners.  
+@kormanEvaluationFrameworkAssessing2019 also used logistic regressions of the relationship between the IFCRT's distributional objectives and aggregate abundance when evaluating how exploitation and smolt-to-adult survival rates affected the ability of Interior Fraser Coho to meet conservation targets. Their approach was similar to that of @deckerAssessmentInteriorFraser2014, except they applied logistic regressions at the CU-level instead of the SMU-level. Using this approach, they calculated the probability that IFCRT sub-population objectives were met as a function of total escapement to the CU within their simulation evaluation. When evaluating how well conservation targets were met at the SMU-level, they chose to rely on the previous values of 20,000 and 40,000 identified by the IFCRT instead of updating these values. Finally, the 2018 RPA used an updated logistic regression to identify a long-term recovery target for Interior Fraser Coho that met the long-term IFCRT objective of 1000 spawners in all sub-populations [@arbeiderInteriorFraserCoho2020]. As a result, @arbeiderInteriorFraserCoho2020 recommended that the long-term recovery target for Interior Fraser Coho should be a 3-year geometric mean abundance of 35,935 natural-origin spawners.  
 
 
 
 ## DATA{#cohoData}
 
-Data for this case study cover return years 1998-2020. Data prior to 1998 were not used due to inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm.). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual natural origin recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs. 
+Data for this case study cover return years 1998-2020. Data prior to 1998 were not used due to inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, DFO, Kamploops, BC, pers. comm.). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual natural origin recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs. 
+
 
 Two types of spawner abundance series were provided: total spawners and natural-origin returns to the spawning grounds (sometimes called 'natural returns').  The first type, total spawners, includes both natural-origin spawners and spawners that originated from hatcheries but returned to spawn naturally, but excludes fish removed from the river for hatchery brood stock.  When modelling spawner-recruit dynamics, total spawners was paired with natural-origin recruitment so that estimated productivity from all spawners was fully captured. The second type of spawner abundance series, natural-origin spawning returns, included only natural-origin fish that returned to spawn, with hatchery brood stock included. Natural-origin spawning returns were used when comparing spawning abundance to CU benchmarks or SMU-level LPRs in order to estimate CU or SMU status.
 
 
-Data were similar to those previously described in @arbeiderInteriorFraserCoho2020; data treatments, assumptions, infilling, and data quality are described in detail in that document. More recent updates that are not described in @arbeiderInteriorFraserCoho2020 include the incorporation of three additional years of data (return years 2018-2020; brood years 2014-2016), updates to the SMU smolt-to-adult survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate the proportion of recruits at age (M. Arbeider, pers. comm.). 
+Data were similar to those previously described in @arbeiderInteriorFraserCoho2020; data treatments, assumptions, infilling, and data quality are described in detail in that document. More recent updates that are not described in @arbeiderInteriorFraserCoho2020 include the incorporation of three additional years of data (return years 2018-2020; brood years 2014-2016), updates to the SMU smolt-to-adult survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate the proportion of recruits at age (M. Arbeider, DFO, Kamploops, BC, pers. comm.). 
 
 
 The exploitation rate time series is a large source of uncertainty for Interior Fraser Coho. Exploitation rates are only available at the SMU-level, so are assumed identical among all CUs. This assumption is unlikely to be true because of known differences in freshwater fisheries among CUs. Furthermore, models used to reconstruct exploitation rates require a large number of assumptions that are expected to be incorrect [@arbeiderInteriorFraserCoho2020]. Because exploitation rate time series are used to reconstruct recruitment time series, errors in exploitation rates will propagate through to estimates of stock-recruitment parameters, relative abundance benchmarks such as S~gen~, and covariation in recruitment residuals. Additional sources of uncertainty in Interior Fraser Coho data sets include observation errors in spawner abundance estimates and estimates of age-at-escapement. Spawner abundance estimates are largely derived from visual surveys, for which observer efficiency is not estimated and survey life is difficult to estimate accurately. Scale sampling to determine age structure is incomplete at the CU-level with small sample sizes, missing data, and limited spatial representation within CUs in some years [@kormanEvaluationFrameworkAssessing2019].
@@ -84,15 +92,16 @@ The exploitation rate time series is a large source of uncertainty for Interior 
 
 ## CU STATUS ESTIMATION
 
-We use three alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho: 1) multidimensional status estimates derived from the Pacific Salmon Status Scanner, 2) CU-level abundance relative to S~gen~ as a lower benchmark on abundance, and 3) Distribution of spawning abundance relative to distributional targets developed by the IFCRT. 
-
-The first approach, which uses the Salmon Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status for CU status-based reference points when a recent WSP status assessment is not available. The other two approaches are primarily used to develop aggregate abundance LRPs in this case study, as well as for a point of comparison with the Salmon Scanner tool.
+We use three alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho: 1) multidimensional status estimates derived from the Pacific Salmon Status Scanner, 2) CU-level abundance relative to S~gen~ as a lower benchmark on abundance, and 3) distribution of spawning abundance relative to distributional targets developed by the IFCRT. 
 
 
-The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of S~gen~, where CU status is considered Red when abundance drops below S~gen~. The value of S~gen~ represents the number of spawners required to recover to S~MSY~ (spawners at maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009]. S~gen~ is one of several benchmarks available for assigning multidimensional CU status in WSP Integrated Status Assessments and the Salmon Scanner; it represents a lower benchmark between Red and Amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015]. While estimates of CU status relative to S~gen~ is a readily available output from the Salmon Scanner tool, we calculated this metric external to the tool for our case study. 
+The first approach, which uses the Salmon Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP. The other two approaches are primarily used to develop aggregate abundance LRPs in this case study, as well as for a point of comparison with the Salmon Scanner tool.
 
 
-The third approach is based on the distribution of spawning escapement among sub-populations nested within CUs (Table \@ref(tab:cohoCU2SP)). We apply this approach for Interior Fraser Coho to maintain consistency with previous recovery planning processes for this SMU [@ifcrtConservationStrategyCoho2006; @arbeiderInteriorFraserCoho2020]. Since the distributional target we use was initially developed by the Interior Fraser Coho Recovery Team in 2006, we refer to it as "IFCRT distributional". Specifically, we use the IFCRT's short-term recovery objective that the 3-year geometric average escapement in at least half of the sub-populations within each of the five CUs is to exceed 1,000 wild-origin spawning Coho salmon, excluding hatchery fish spawning in the wild. We selected the short-term recovery target as a proxy for the lower benchmark in our case study because, as noted by @arbeiderInteriorFraserCoho2020, the short-term target was designed as an immediate target when the population was endangered. As such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity. We have included this third approach to defining CU status to demonstrate the range of approaches and metrics that can be used, and to demonstrate sensitivity of the LRP to choice of metrics for assigning CU-status.  Future iterations of the Pacific Salmon Status Scanner approach could include distributional metrics such as those used in the IFCRT approach.  
+The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of S~gen~, where CU status is considered Red when abundance drops below S~gen~. The value of S~gen~ represents the number of spawners required to recover to S~MSY~ (spawners at maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009]. S~gen~ is one of several benchmarks available for assigning multidimensional CU status in WSP Integrated Status Assessments and the Salmon Scanner; it represents a lower benchmark between Red and Amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015]. While estimates of CU status relative to S~gen~ are readily available outputs from the Salmon Scanner tool, we calculated this metric external to the tool for our case study. 
+
+
+The third approach is based on the distribution of spawning escapement among sub-populations nested within CUs (Table \@ref(tab:cohoCU2SP)). We apply this approach for Interior Fraser Coho to maintain consistency with previous recovery planning processes for this SMU [@ifcrtConservationStrategyCoho2006; @arbeiderInteriorFraserCoho2020]. Since the distributional target we use was initially developed by the Interior Fraser Coho Recovery Team in 2006, we refer to it as "IFCRT distributional". Specifically, we use the IFCRT's short-term recovery objective that the 3-year geometric average escapement in at least half of the sub-populations within each of the five CUs is to exceed 1,000 wild-origin spawners, excluding hatchery fish spawning in the wild. We selected the short-term recovery target as a proxy for the lower benchmark in our case study because, as noted by @arbeiderInteriorFraserCoho2020, the short-term target was designed as an immediate target when the population was endangered. As such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity. We have included this third approach to defining CU status to demonstrate the range of approaches and metrics that can be used, and to demonstrate sensitivity of the LRP to choice of metrics for assigning CU-status.  Future iterations of the Pacific Salmon Status Scanner approach could include distributional metrics such as those used in the IFCRT approach.  
 
 
 ### Estimation of Sgen{#cohoSgen}
@@ -111,7 +120,7 @@ Future stock-recruitment analyses for Interior Fraser Coho may wish to re-visit 
 
 The formulations for the two stock-recruitment<!--LW: changed this from 'two-stock recruitment'--> models are described below. 
 
-\
+
 &nbsp;
 
 ***Model 1: Ricker***
@@ -163,7 +172,7 @@ This model formulation is similar to the Ricker model used in @arbeiderInteriorF
   \sigma_{v_i} \sim Inverse Gamma (0.1,0.1)
 \end{equation}
 
-\
+
 &nbsp;
 
 ***Model 2: Ricker_priorCap***
@@ -182,6 +191,7 @@ To maintain consistency with this previous work on Interior Fraser Coho, we also
 
 @arbeiderInteriorFraserCoho2020 and @kormanEvaluationFrameworkAssessing2019 set $\mu_{S_{REP}}$ at 1.5 times the S~REP~ value estimated from the base model fit without a prior on S~REP~. For our model fits (described in Section \@ref(logistic)), we found that we needed to constrain $\mu_{SREP}$ at no more than 1.4 times the S~REP~ value to achieve model convergence, so we used the 1.4 times expansion instead.  We set $\sigma_{SREP}$ at $\sqrt{2} \times 1000 = 1414$ spawners, which is the same value used by @arbeiderInteriorFraserCoho2020. Note that the "$\times 1000$" term is used to correct for scaling spawner abundance by 1/1000 when fitting models. The effect of adding the prior on S~REP~ when fitting individual models to available data is shown in Figure \@ref(fig:coho-SR-fit).  
   
+&nbsp;
 
 ***Calculation of Sgen***  
 
@@ -273,9 +283,8 @@ When estimating logistic regression LRPs using S~gen~, we used an integrated mod
 (ii)	A logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with a specified probability of all CUs being above S~gen~ (Equations \@ref(eq:logistic) - \@ref(eq:logisticLRP))
 
 
-We initially considered a third version of the logistic regression model, in which we used the multidimensional algorithm within Salmon Scanner to characterize CU status. Preliminary model evaluations led us to exclude this model due to poor fit. The multidimensional algorithm relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks, while our logistic regression approach uses raw (unsmoothed) aggregate abundance as a predictor variable. As a result, when logistic regressions were fit to multidimensional CU status estimates, there was a mismatch in the timing of abundance highs and lows. This mismatch led to a weak/nonexistent relationship between SMU status and the raw (unsmoothed) abundances. Using the generational mean of aggregate abundance as the predictor variable in the logistical regression fit, instead of raw annual abundance values, introduced considerable autocorrelation in statuses.
+We initially considered a third version of the logistic regression model, in which we used the multidimensional algorithm within Salmon Scanner to characterize CU status. Preliminary model evaluations led us to exclude this model due to poor fit. The multidimensional algorithm relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks, while our logistic regression approach uses raw (unsmoothed) aggregate abundance as a predictor variable. As a result, when logistic regressions were fit to multidimensional CU status estimates, there was a mismatch in the timing of abundance highs and lows. This mismatch led to a weak/nonexistent relationship between SMU status and the raw (unsmoothed) abundances. In addition, using the generational mean of aggregate abundance as the predictor variable in the logistic regression fit, instead of raw annual abundance values, introduced considerable autocorrelation in statuses.
 
-\
 &nbsp;
 
 ***Retrospective Analysis and Analysis Evaluating Impact of Missing CUs***
@@ -290,7 +299,7 @@ In addition, to examine the effect of missing CUs on retrospective LRP estimates
    (\#eq:status)
 \end{equation}
 
-where $nCU$ is the number of CUs being used (3, 4, or 5), $S_{i,t}$ is the abundance of natural-origin spawners returning to CU $i$ in year $t$ (including fish removed for brood), and $LRP'_t$ is the LRP calculated in year $t$ using only data from $nCU$. SMU-level status in a given year was calculated for all possible combinations of CUs available (5 combinations when $nCU$= 4 and 10 combinations when $nCU$ = 3) to allow examination of the stability of status estimates among available combinations. Estimates of SMU status relative to LRPs were used to compare among missing CU scenarios instead of actual LRP estimates because the magnitude of the LRP will vary with the number and combination of CUs used. Since uncertainty estimates for spawner abundance series are not available, confidence intervals on LRP status are based solely on estimated 95% confidence intervals for the LRP. We evaluated the missing CU scenarios retrospectively for years 2017-2020.
+where $nCU$ is the number of CUs used (3, 4, or 5), $S_{i,t}$ is the abundance of natural-origin spawners returning to CU $i$ in year $t$ (including fish removed for brood), and $LRP'_t$ is the LRP calculated in year $t$ using only data from $nCU$. SMU-level status in a given year was calculated for all possible combinations of CUs available (5 combinations when $nCU$= 4 and 10 combinations when $nCU$ = 3) to allow examination of the stability of status estimates among available combinations. Estimates of SMU status relative to LRPs were used to compare among missing CU scenarios instead of actual LRP estimates because the magnitude of the LRP will vary with the number and combination of CUs used. Since uncertainty estimates for spawner abundance are not available, confidence intervals on LRP status are based solely on estimated 95% confidence intervals for the LRP.
 
 
 ### Results
@@ -576,7 +585,7 @@ knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 ```
 
 
-We show historical results for three types of CU status-based LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > Red (e.g., CUbased: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., CUbased: Sgen-Ricker), and using the IFCRT distributional target status (CUbased: IFCRT) . Holt et al. (in review) recommend CU statuses be derived from the multidimensional approach used within the Salmon Scanner; however, we show results for the single metric S~gen~ and IFCRT approaches to demonstrate how these approaches impact SMU status. This comparison is of interest because our aggregate abundance LRPs use status estimates based on a single metric rather than a multidimensional approach.   
+We show historical results for three types of CU status-based LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > Red (e.g., CUbased: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., CUbased: Sgen-Ricker), and using the IFCRT distributional target status (CUbased: IFCRT) . @holtGuidelinesDefiningLimitInpress recommend CU statuses be derived from the multidimensional approach used within the Salmon Scanner; however, we show results for the single metric S~gen~ and IFCRT approaches to demonstrate how these approaches impact SMU status. This comparison is of interest because our aggregate abundance LRPs use status estimates based on a single metric rather than a multidimensional approach.   
 
 
 In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a CU status-based LRP. We label this case "CUbased : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as Amber or Amber/Green.  
