--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -10,7 +10,7 @@ output:
 
 <!-- LW comment: there are 8 labeled inlets in Fig 22, but Esparanza and Nootka are grouped together in Table 6 and the text refers to 7 inlets. Why are Nootka and Esperanza grouped? -->
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007; @pacificsalmoncommissionsentinelstockscommitteePacificSalmonCommission2018; @dfoReviewUpdateSouthern2013], 7 large inlets (or sounds), and 20 escapement indicators populations which have relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview)) [@riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production for many of these populations, where they help achieve harvest, conservation and assessment objectives. However, hatcheries are also considered a risk factor for the long-term sustainability of CUs because they can reduce wild genetic diversity and fitness [@withlerGeneticallyBasedTargets2018]. As described in Holt et al. (in review), only escapement indicator populations without significant enhancement (i.e., populations with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5) were included in this analysis. Although most fish in these populations are of natural origin (i.e., they spawned in the wild), 'wild' fish, defined in the WSP as second generation natural-origin fish, may be in the minority [@withlerGeneticallyBasedTargets2018]. <!--CH: Chuck asked for pHOScensus values which would include out-of-basin strays. I don't have those data, but we could ask SEP/Area staff if necessary-->
+The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007; @pacificsalmoncommissionPacificSalmonCommission2018; @dfoReviewUpdateSouthern2013], 7 large inlets (or sounds), and 20 escapement indicators populations which have relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview)) [@riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production for many of these populations, where they help achieve harvest, conservation and assessment objectives. However, hatcheries are also considered a risk factor for the long-term sustainability of CUs because they can reduce wild genetic diversity and fitness [@withlerGeneticallyBasedTargets2018]. As described in @holtGuidelinesDefiningLimitInpress, only escapement indicator populations without significant enhancement (i.e., populations with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5) were included in this analysis. Although most fish in these populations are of natural origin (i.e., they spawned in the wild), 'wild' fish, defined in the WSP as second generation natural-origin fish, may be in the minority [@withlerGeneticallyBasedTargets2018]. <!--CH: Chuck asked for pHOScensus values which would include out-of-basin strays. I don't have those data, but we could ask SEP/Area staff if necessary-->
 
 
 ```{r chinook-map, fig.cap="Map of the WCVI Chinook SMU, component CUs (coloured red, blue, and yellow), and inlets (labelled in black). Note, Designatable Units (DUs) defined by COSEWIC are aligned with CUs in this SMU.", warning=FALSE, echo=FALSE, fig.align="center"}
@@ -86,7 +86,7 @@ Based on differences in threats and the coastal marine environment, we suggest t
 Two of the three CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as Red status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component populations without hatchery enhancement within the most recent 12 years, omitting populations with enhancement during that period. For West Vancouver Island-South, Red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuquot, Red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed because the indicator site for this CU was enhanced over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of escapement indicator and non-indicator populations within each CU is available in @brown2020SummaryAbundance2020. 
 
 
-WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-age 2 survival rates for WCVI Chinook and low spawner levels over the past two decades are reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. Since the mid 1990s, a variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoIntegratedFisheriesManagement2021].
+WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoSouthernSalmonIntegrated2021]. Poor smolt-age 2 survival rates for WCVI Chinook and low spawner levels over the past two decades are reasons for conservation concern in the IFMP [@dfoSouthernSalmonIntegrated2021, p. 129]. Since the mid 1990s, a variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoSouthernSalmonIntegrated2021].
 
 
 For some Chinook Salmon populations including those on the west coast of Vancouver Island, habitat-based benchmarks have been used to derive status on spawner abundances [@parkenHabitatbasedMethodsEstimate2006]. These benchmarks are estimated using an empirical relationship between watershed area of spawning habitat and two stock-recruitment benchmarks, spawner abundances at replacement, S~REP~ (also called spawners at equilibrium S~eq~), and S~MSY~, in a meta-analysis of 25 Chinook populations<!--LW: changed from stocks--> across North America [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010].  Benchmarks can then be predicted for populations without stock-recruitment data from their watershed area.
@@ -129,7 +129,7 @@ csasdown::csas_table(dat, booktabs = T, caption = "Sum of watershed areas for es
 ```
 
 ### Spawner Abundances
-Spawner abundances were provided for 20 WCVI escapement indicators populations (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO South Coast Area staff for local and international assessment and management [e.g., @dfoWCVISalmonBulletin2021]. Missing values were not infilled and in some cases methodologies for monitoring changed over time, which limited the estimation of historical SMU status.  Although some escapement time-series begin in 1953, others begin as late as 1995, limiting our analyses to these most recent years that are based on a consistent escapement methodology [@pacificsalmoncommissionsentinelstockscommitteePacificSalmonCommission2018]. <!--CH: I haven't added the numbers of missing values, but they can be seen in the historical status plot -->In future work, infilled time-series of escapement indicator populations within inlets (or CUs) could be developed to extend the available time-series. Spawner abundances for escapement indicators populations are estimated from a combination of snorkel,  boat and aerial surveys, bank walks, and fence counts, which range in accuracy and precision [see @dfoWestCoastVancouver2014 for a summary of monitoring and assessment methods]. In particular, spawner estimates from visual surveys are a source of uncertainty for this SMU. Abundances are usually estimated using Area-Under-the-Curve (AUC) or associated maximum likelihood methods. For populations that are not surveyed continuously over the spawning season, abundances are estimated using peak counts or a combination of observations from multiple surveys, contributing additional uncertainties to the annual abundance estimates. 
+Spawner abundances were provided for 20 WCVI escapement indicators populations (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO South Coast Area staff for local and international assessment and management [e.g., @dfoWCVISalmonBulletin2021]. Missing values were not infilled and in some cases methodologies for monitoring changed over time, which limited the estimation of historical SMU status.  Although some escapement time-series begin in 1953, others begin as late as 1995, limiting our analyses to these most recent years that are based on a consistent escapement methodology [@pacificsalmoncommissionPacificSalmonCommission2018]. <!--CH: I haven't added the numbers of missing values, but they can be seen in the historical status plot -->In future work, infilled time-series of escapement indicator populations within inlets (or CUs) could be developed to extend the available time-series. Spawner abundances for escapement indicators populations are estimated from a combination of snorkel,  boat and aerial surveys, bank walks, and fence counts, which range in accuracy and precision [see @dfoWestCoastVancouver2014 for a summary of monitoring and assessment methods]. In particular, spawner estimates from visual surveys are a source of uncertainty for this SMU. Abundances are usually estimated using Area-Under-the-Curve (AUC) or associated maximum likelihood methods. For populations that are not surveyed continuously over the spawning season, abundances are estimated using peak counts or a combination of observations from multiple surveys, contributing additional uncertainties to the annual abundance estimates. 
 
 
 <!--Diana McHugh: Citations for AUC
@@ -156,7 +156,7 @@ The metric, Proportionate Natural Influence, PNI is used to estimate the relativ
 
 We initially considered a stricter definition of hatchery enhancement that included only populations with PNI values $\geqslant$ 0.72. This stricter threshold resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which on the WCVI tend to be populations with hatcheries. The PNI threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, accounts for the trade-off between assessing CU-level biodiversity and excluding significant hatchery impacts. 
 
-Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program (DFO in review)^[DFO in review. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC]. Uncertainties in PNI values stem from low sample sizes on the spawning grounds to estimate proportion hatchery-origin spawners, large uncertainties from CWT estimates of hatchery-origin spawners due to insufficient marking of hatchery production, and lack of data on proportions of natural-origin brood stock (and assumption that proportions of natural-origin brood stock equal proportions of natural-origin spawners). 
+Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program (DFO, in review)^[DFO in review. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC]. Uncertainties in PNI values stem from low sample sizes on the spawning grounds to estimate proportion hatchery-origin spawners, large uncertainties from CWT estimates of hatchery-origin spawners due to insufficient marking of hatchery production, and lack of data on proportions of natural-origin brood stock (and assumption that proportions of natural-origin brood stock equal proportions of natural-origin spawners). 
 
 Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for populations with PNI $\geqslant$ 0.5, total spawner abundances (i.e., combined natural- and hatchery-origin spawners) were used in the assessment of CU and aggregate SMU level statuses. This may result in optimistic assessments of status.  We recommend the design of hatchery marking and spawning ground sampling programs to collect data to estimate the contribution of hatchery-origin spawners to total production for these escapement indicator populations. The inclusion of hatchery-origin fish in estimates of status is a key source of uncertainty for this SMU, and likely many others in Pacific Region.
 
@@ -171,7 +171,7 @@ CH: my initial thinking would be remove time-periods where PNI is very high from
 <!--CH: Mention caveat about northern CU/inlet being DD possibly?-->
 
 
-Inlet status was derived by applying the multidimensional algorithm used within the Pacific Salmon Status Scanner to individual inlets (Pestal et al., in prep). We found that the status using this algorithm was equivalent to status on a single metric, abundances relative to an estimated lower benchmark for all inlets. When abundances are only available on a relative scale and abundance benchmarks can be estimated, status within the multidimensional algorithm reduces to spawner abundances relative to abundance-based benchmarks  (as shown in Figure \@ref(fig:decision-tree)). Because the resulting LRPs were equivalent, in some cases we present only a single set of results, labeled as the single metric approach which also represents status based on the multidimensional algorithm in this case. Holt et al. (in review) recommend applying the multidimensional approach used in the Salmon Scanner to derive CU-level status.
+Inlet status was derived by applying the multidimensional algorithm used within the Pacific Salmon Status Scanner to individual inlets (Pestal et al., in prep). We found that the status using this algorithm was equivalent to status on a single metric, abundances relative to an estimated lower benchmark for all inlets. When abundances are only available on a relative scale and abundance benchmarks can be estimated, status within the multidimensional algorithm reduces to spawner abundances relative to abundance-based benchmarks  (as shown in Figure \@ref(fig:decision-tree)). Because the resulting LRPs were equivalent, in some cases we present only a single set of results, labeled as the single metric approach which also represents status based on the multidimensional algorithm in this case. @holtGuidelinesDefiningLimitInpress recommend applying the multidimensional approach used in the Salmon Scanner to derive CU-level status.
 
 S~gen~ is the spawner abundance required to achieve S~MSY~ within one generation without fishing under equilibrium conditions, and is the lower benchmark on abundances applied under the WSP. We derived S~gen~ by optimizing the Ricker equation with recruitment set to S~MSY~ (equation \@ref(eq:Sgen) repeated again here for transparency):
 
