--- a/caseStudyWP/appendix-coho.Rmd
+++ b/caseStudyWP/appendix-coho.Rmd
@@ -13,7 +13,7 @@ After that, all subsequent sections will be turned into appendices. -->
 
 ## Assessment of CU Representativeness Based on Guidelines Criteria
 
-We considered the 4 criteria identified in Holt et al. (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. Although statuses are available for all CUs in this SMU, we consider the application of these criteria to evaluate how decisions about whether CU status can be inferred from other CUs based on these criteria differ from the results of sensitivity analyses presented in the main paper. As part of these sensitivity analyses, we explored how removing one or two CUs affected LRP estimation and status assessments against the LRP.
+We considered the 4 criteria identified in @holtGuidelinesDefiningLimitInpress to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. Although statuses are available for all CUs in this SMU, we consider the application of these criteria to evaluate how decisions about whether CU status can be inferred from other CUs based on these criteria differ from the results of sensitivity analyses presented in the main paper. As part of these sensitivity analyses, we explored how removing one or two CUs affected LRP estimation and status assessments against the LRP.
 
 In an assessment of threats for Interior Fraser Coho completed as part of the 2018 Recovery Potential Assessment, @arbeiderInteriorFraserCoho2020 ranked a comprehensive set of threats on a scale of high, medium, low, and unknown.  The dominant threats to this SMU are from activities related to forestry, forest fires, agriculture, and urban and rural development. Specific threats arising from these activities included the modification of catchment surfaces, effluents from agriculture and forestry, and linear development, which is defined as the straightening and channelization of streams [@arbeiderInteriorFraserCoho2020]. While impacts from a given activity may be higher in some CUs than others, the interconnected threats stemming from multiple activities, as well as cumulative impacts, mean that it is hard to isolate one CU that experiences threats differently than another. Furthermore,  extensive agricultural and linear development in the lower Fraser River, which all Interior Fraser Coho smolts migrate through, and a proportion of juveniles rear in, means that there is a possibility that all CUs are affected by threats stemming from agriculture and linear development.
 
